bug: search icon mobile view fix

--- a/src/app/trainees/trainee-filters/trainee-filters.component.scss
+++ b/src/app/trainees/trainee-filters/trainee-filters.component.scss
@@ -1,3 +1,3 @@
 .trainee-filters__btn {
-  margin-right: 15px;
+  margin: 0 15px 15px 0;
 }
